--- a/sujet/tpROS.tex
+++ b/sujet/tpROS.tex
@@ -20,7 +20,7 @@
 \pagestyle{fancyplain}
 
 
-\newcommand{\school}{Télécom Physique Strasbourg, TIC-Santé 2ème année hop hop}
+\newcommand{\school}{Télécom Physique Strasbourg, TIC-Santé 2ème année}
 \renewcommand{\year}{2014-2015}
 
 \lhead[]{\fancyplain{}{\scriptsize\school}}
