--- a/sujet/tpROS.tex
+++ b/sujet/tpROS.tex
@@ -439,7 +439,7 @@ On pourra aussi créer un nouveau \emph{publisher} (Annexe \ref{sec:publish}) pe
 
 \section{Troisième séance}
 
-La deuxième séance porte sur l'exploitation du jacobien dans la commande. On souhaite maintenant contrôler le robot dans l'espace opérationnel.
+La troisième séance porte sur l'exploitation du jacobien dans la commande. On souhaite maintenant contrôler le robot dans l'espace opérationnel.
 
 \begin{itemize}
  \medskip\item[\textbf{\underline{Q8}}] Programmer la fonction \texttt{compJacobian} qui calcule la matrice jacobienne (classe \texttt{vpMatrix}) en fonction du vecteur des variables articulaires.
