Less things installed

--- a/sujet/tpROS.tex
+++ b/sujet/tpROS.tex
@@ -125,7 +125,7 @@ Le but de son développement est de pouvoir mettre à disposition de chacun des 
 
 De façon assez logique, les logiciels utilisant ROS se présentent sous une forme élémentaire, le package. Sur un ordinateur donné, tous les packages de l'utilisateur sont situés dans le même dossier.
 
-Pour ce TP nous utilisons l'avant-dernière version de ROS : \emph{Hydro}. La dernière version, \emph{Indigo}, sera directement compatible avec le code.
+Pour ce TP nous utilisons la version \emph{Indigo} de ROS.
 
 \subsection{Préparation de l'environnement de travail}
 
