--- a/sujet/tpROS.tex
+++ b/sujet/tpROS.tex
@@ -451,7 +451,7 @@ On a pu voir qu'une fois la modélisation géométrique validée, le schéma de 
 \item Modéliser le robot suivant~:
 \begin{figure}[h]
 \centering
-\includegraphics[width=.4\linewidth]{RRRP}
+\includegraphics[width=.4\linewidth]{rrrp}
 \caption{Schéma d'un robot RRRP à 4 degrés de liberté}
 \label{fig:3RP}
 \end{figure}\\
